[build-system]
requires = ["setuptools", "setuptools-scm", "black"]
build-backend = "setuptools.build_meta"

[project]
name = "musicbrainz_wrapper"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Peter van Liesdonk", email = "peter@liesdonk.nl" },
]

license = { text = "MIT" }
dependencies = [
    "musicbrainzngs",
    "sqlalchemy",
    "python-dateutil",
    "rapidfuzz",
    "pyacoustid",
    "zstandard",
    "sqlalchemy-utils",
    "requests-file",
    "typesense"

]

[project.scripts]

[tool.black]
