[build-system]
requires = ["setuptools", "setuptools-scm", "black"]
build-backend = "setuptools.build_meta"

[tool.black]


[project]
name = "pymusicbrainz"
version = "0.4.3"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Peter van Liesdonk", email = "peter@liesdonk.nl" },
]

license = { text = "MIT" }
dependencies = [
    "musicbrainzngs",
    "sqlalchemy",
    "python-dateutil",
    "rapidfuzz",
    "pyacoustid",
    "sqlalchemy-utils",
    "requests-file",
    "typesense",
    "unidecode",
    "mbdata @ git+https://github.com/pvliesdonk/mbdata.git",
    "psycopg2-binary"

]

[project.scripts]
